--- a/crime_stoppers/app/views/users/index.html
+++ b/crime_stoppers/app/views/users/index.html
@@ -1,5 +1,6 @@
 <% if current_user %>
 	<%= link_to "Log Out", sign_out_path %>
+	<%= link_to "Edit your profile", edit_user_path(current_user) %>
 <% else %>
 	<%= link_to "Log in", new_session_path %>
 	<%= link_to "Sign up", new_user_path %>
