--- a/crime_stoppers/app/views/crime_records/index.html.erb
+++ b/crime_stoppers/app/views/crime_records/index.html.erb
@@ -1,5 +1,5 @@
 <% if current_user.is_admin%>
-  <h2>Import Products</h2>
+  <h2>Import Records</h2>
   <%= form_tag import_crime_records_path, multipart: true do %>
     <%= file_field_tag :file %>
     <%= submit_tag "Import" %>
