--- a/crime_stoppers/app/views/crime_records/index.html.erb
+++ b/crime_stoppers/app/views/crime_records/index.html.erb
@@ -8,6 +8,9 @@
 <h3>Crime Types</h3>
 <table class="table table-hover">
   <% @crime_types.each do |crime_type| %>
-      <tr><td><%= link_to crime_type.name, crime_record_path(crime_type) %><td><tr>
+      <tr>
+	<td><%= link_to crime_type.name, crime_record_path(crime_type) %></td>
+	<td><%= link_to "Edit", edit_crime_type_path(crime_type) %></td>
+      </tr>
   <% end %>
 </table>
