--- a/crime_stoppers/app/views/crime_types/edit.html.erb
+++ b/crime_stoppers/app/views/crime_types/edit.html.erb
@@ -7,6 +7,11 @@
     </div>
 
     <div class="form-group">
+      <%= f.label :incident_description, 'Incident Description' %>
+      <%= f.text_field :incident_description, class: 'form-control' %>
+    </div>
+
+    <div class="form-group">
       <%= f.label :severity, 'Severity' %>
       <%= f.text_field :severity, class: 'form-control' %>
     </div>
