Set default date

--- a/crime_stoppers/app/views/users/index.html.erb
+++ b/crime_stoppers/app/views/users/index.html.erb
@@ -89,8 +89,8 @@
         <!-- /.row -->
 	<!-- Date picker start-->
 	<%= form_tag "/", method: "get" do %>
-  		<p>Date: <input value = "<%= @date %>" name = "date1" type="text" id="datepicker1"></p>
-                <p>Date: <input value = "<%= @date %>" name = "date2" type="text" id="datepicker2"></p>
+  		<p>Date: <input value = "<%= @date1 %>" name = "date1" type="text" id="datepicker1"></p>
+                <p>Date: <input value = "<%= @date2 %>" name = "date2" type="text" id="datepicker2"></p>
   		<input type="submit" value="Submit"> 
 	<% end %>
 	<!-- Date picker end-->
