Filter data based on severity

--- a/crime_stoppers/app/views/users/index.html.erb
+++ b/crime_stoppers/app/views/users/index.html.erb
@@ -91,6 +91,16 @@
 	<%= form_tag "/", method: "get" do %>
   		<p>Date: <input value = "<%= @date1 %>" name = "date1" type="text" id="datepicker1"></p>
                 <p>Date: <input value = "<%= @date2 %>" name = "date2" type="text" id="datepicker2"></p>
+		<p>Severity: 
+		<select name="severity">
+			<option value = <%= @severity %> selected="selected"><%= @severity %></option>
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option>
+                        <option value="6">6</option>
+		</select>
   		<input type="submit" value="Submit"> 
 	<% end %>
 	<!-- Date picker end-->
