--- a/crime_stoppers/app/views/crime_types/edit.html.erb
+++ b/crime_stoppers/app/views/crime_types/edit.html.erb
@@ -3,7 +3,7 @@
   <%= form_for @crime_type do |f| %>
     <div class="form-group">
       <%= f.label :name, 'Name' %>
-      <%= f.text_field :name, class: 'form-control' %>
+      <%= f.text_field :name, class: 'form-control', :readonly => true %>
     </div>
 
     <div class="form-group">
