--- a/crime_stoppers/app/views/crime_types/edit.html.erb
+++ b/crime_stoppers/app/views/crime_types/edit.html.erb
@@ -1,9 +1,10 @@
+<% if current_user.is_admin%>
 <h3>Edit</h3>
 <div class="row col-sm-6">
   <%= form_for @crime_type do |f| %>
     <div class="form-group">
       <%= f.label :name, 'Name' %>
-      <%= f.text_field :name, class: 'form-control', :readonly => true %>
+      <%= f.text_field :name, class: 'form-control', :readonly => true%>
     </div>
 
     <div class="form-group">
@@ -21,3 +22,4 @@
     <%= link_to 'Cancel', users_path %>
   <% end %>
 </div>
+<% end %>
