--- a/crime_stoppers/app/views/crime_records/index.html.erb
+++ b/crime_stoppers/app/views/crime_records/index.html.erb
@@ -9,7 +9,11 @@
 <table class="table table-hover">
   <% @crime_types.each do |crime_type| %>
       <tr>
-	<td><%= link_to crime_type.name, crime_record_path(crime_type) %></td>
+	<% if crime_type.incident_description.nil? || crime_type.incident_description.empty? %>
+	  <td><%= link_to crime_type.name, crime_record_path(crime_type) %></td>
+	<% else %>
+	  <td><%= link_to crime_type.incident_description, crime_record_path(crime_type) %></td>
+	<% end %>
 	<% if current_user.is_admin%>
 	  <td><%= link_to "Edit", edit_crime_type_path(crime_type) %></td>
         <% end %>
